@@ -40,6 +40,7 @@ Changelog for 1.3.6.1
 -Miscellaneous improvements for the Emscripten experience on iOS (@ds-sloth)
 -Fixed bug where touchscreen controller would stay active during text entry screen without rendering (@ds-sloth)
 -Added the localization system which allows you to translate engine into other languages than English. (@Wohlstand)
+-Added an ability to place multiple stars at the same section using the Unique Star ID special value. (@Wohlstand)
 
 Changelog for 1.3.6
 -Added an ability to toggle drawing of the HUD and other on-screen meta data using F1 key (@Wohlstand)
